--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,27 @@
-header, .about{
+header, .about, .send{
     background-color: #1ABC9C;
+}
+
+.send{
+    color: white;
+}
+
+.location{
+    background-color: #3A546D;
+}
+
+.circle{
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.green{
+    color: #1ABC9C;
 }
