--- a/assets/style.css
+++ b/assets/style.css
@@ -31,3 +31,15 @@ footer{
     height: 100px;
     line-height: 100px;
 }
+
+.white{
+    height: 3px;
+    width: 25%;
+    background-color: white;
+}
+
+.black{
+    height: 3px;
+    width: 25%;
+    background-color: black;
+}
