--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,30 @@ header, .about, .send{
 }
 
 .send{
-    color: white;
+    color: #ffffff;
+}
+
+.white{
+    height: 3px;
+    width: 25%;
+    background-color: white;
+}
+
+.black{
+    height: 3px;
+    width: 10%;
+    background-color: black;
+}
+
+.white-2{
+    height: 3px;
+    width: 5%;
+    background-color: white;
+}
+
+.portfolio .contents{
+    position: relative;
+    cursor: pointer;
 }
 
 .location{
@@ -32,20 +55,24 @@ footer{
     line-height: 100px;
 }
 
-.white{
-    height: 3px;
-    width: 25%;
-    background-color: white;
+/* effetti di hover */
+
+.portfolio .contents:hover::before{
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    background-color: lightgreen;
+    opacity: 0.5;
 }
 
-.black{
-    height: 3px;
-    width: 10%;
-    background-color: black;
-}
-
-.white-2{
-    height: 3px;
-    width: 5%;
-    background-color: white;
+.portfolio .contents:hover::before{
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3C!--! Font Awesome Pro 6.4.0 by %40fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons  Inc. --%3E%3Cpath d='M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z'/%3E%3C/svg%3E");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 20%;
 }
